<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/gradient_1"
        app:cardCornerRadius="5dp"
        app:cardElevation="6dp"
        app:contentPaddingBottom="40dp"
        app:contentPaddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_round_rect_stroke"
                android:backgroundTint="@color/shade3"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/forum_user"
                    android:drawableTint="@color/shade3"
                    android:gravity="center_vertical"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:paddingStart="10dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/shade3" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/shade3">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/lock"
                        android:drawableTint="@color/shade3"
                        android:gravity="center_vertical"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_1"
                android:text="@string/log_in_btn"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/shade4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_user_name"
                    android:textColor="@color/shade4" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/copy_right"
        android:textColor="@android:color/white"
        android:textSize="11sp" />
</LinearLayout>